<resources>
    <string name="app_name">Github User</string>
    <string name="search_user">Search User</string>
    <string name="menu_1">Settings</string>
    <string name="menu_2">Favorite</string>
    <string name="name_user">Name User</string>
    <string name="searchbar_hint">Search User</string>

    <!-- TODO: Fragment -->
    <string name="tab_text_1">Followers</string>
    <string name="tab_text_2">Following</string>
    <string name="TabLayout">This is Tab Layout</string>

    <!-- TODO: activity_settings -->
    <string name="title_settings">Settings</string>
    <string name="security">Security &amp; Privacy</string>
    <string name="textSize">Text Size</string>
    <string name="language">Language</string>
    <string name="sendMessage">Send us a message</string>
    <string name="aboutUs">About Us</string>
    <string name="faqs">FAQs</string>
    <string name="dark_mode">Dark Mode</string>

    <!-- TODO: activity_favorite -->
    <string name="tittle_favorite">Your Favorite User</string>
    <string name="add">Success added user to favorite</string>
    <string name="delete">Success delete user from favorite</string>
    <string name="floatingButton">Favorite FLoating Button</string>

    <!-- TODO: activity_detail -->
    <string name="following"> Following</string>
    <string name="followers"> Followers</string>

</resources>